--- a/MauiDevExpressSample/MauiDevExpressSample.csproj
+++ b/MauiDevExpressSample/MauiDevExpressSample.csproj
@@ -52,4 +52,34 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
+	  <PackageReference Include="DevExpress.Maui.Controls">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.DataGrid">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Editors">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Scheduler">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-ios'">
+	  <PackageReference Include="DevExpress.Maui.Controls">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.DataGrid">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Editors">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Scheduler">
+	    <Version>23.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
